--- a/Projecte-1/Capa_Vista/src/org/milaifontanals/vista/Productes_Vista.form
+++ b/Projecte-1/Capa_Vista/src/org/milaifontanals/vista/Productes_Vista.form
@@ -389,6 +389,9 @@
               <Image iconType="3" name="/org/milaifontanals/Imatges/icons8-trash-16.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Eliminar_BTActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
@@ -498,6 +501,9 @@
               <Image iconType="3" name="/org/milaifontanals/Imatges/icons8-show-property-32.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Content_BTActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
