--- a/Projecte-1/Capa_Vista/src/org/milaifontanals/vista/Productes_Vista.form
+++ b/Projecte-1/Capa_Vista/src/org/milaifontanals/vista/Productes_Vista.form
@@ -377,6 +377,9 @@
               <Image iconType="3" name="/org/milaifontanals/Imatges/icons8-edit-16.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Editar_BTActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
